# bot-alert-rate

./: README.md  example.py  example.ts
python/: pyproject.toml
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts
typescript/src/__tests__/: index.test.ts
typescript/src/helpers/: calculate_alert_rate.ts  constants.ts
